# MonoFolio

./: .containerignore  .gitignore  .spectral.yaml  CHANGELOG.md  Cargo.toml  README.md  SECURITY.md  catalog-info-api.yaml  catalog-info-back.yaml  catalog-info-front.yaml  codecov.yaml  cog.toml  compose.full.yaml  compose.yaml  devfile.yaml  nx.json  package-lock.json  package.json  sonar-project.properties  swagger.json  tsconfig.base.json
.github/: dependabot.yml
.github/workflows/: front-lint.yml  rust-api-lint.yml  rust-audit.yml  rust-clippy.yml  rust-coverage.yml  rust-sbom.yml  sonar.desacyml  vue-test.yml
apps/back/: Cargo.toml  back.cdx.json  project.json
apps/back/src/: config.rs  lib.rs  main.rs
apps/back/src/api/: apidocs.rs  init.rs  mod.rs
apps/back/src/api/blog/: get_timeline.rs  mod.rs
apps/back/src/api/doc/: get_doc_sidebar.rs  mod.rs
apps/back/src/api/home/: get_home.rs  mod.rs
apps/back/src/api/media/: get_media.rs  mod.rs
apps/back/src/api/page/: get_page.rs  get_page_v2.rs  mod.rs
apps/back/src/api/project/: get_project_list.rs  mod.rs
apps/back/src/home_profile/: home.rs
apps/back/src/homeprofil/: home.rs
apps/back/src/markdown/: blog_timeline.rs  content_struct.rs  doc_header.rs  doc_sidebar.rs  folder_struct.rs  mod.rs  page_database.rs
apps/front/: components.d.ts  index.html  project.json  tailwind.config.js  tsconfig.app.json  tsconfig.json  vite.config.ts
apps/front/public/: manifest.json  site.webmanifest
apps/front/public/icon/: selection.json
apps/front/src/: main.ts  styles.css  styles.scss  stylesV2.css  var.css  var.scss  varV2.css
apps/front/src/app/: App.spec.ts  App.vue
apps/front/src/component/Doc/: DocSidebar.vue  DocSidebarItem.vue
apps/front/src/component/Hero/: Hero.vue  HeroLink.vue  TextRotate.vue
apps/front/src/component/NavBar/: NavBar.vue
apps/front/src/component/Page/: PageContent.vue  PageMetadata.vue  PageRender.vue  PageString.vue  PageTechnoChip.vue  PageTitle.vue
apps/front/src/component/PageV2/: PageV2Adviser.vue  PageV2Content.vue  PageV2Metadata.vue  PageV2Render.vue
apps/front/src/component/helper/: Footer.vue  IcoMoonSVG.test.ts  IcoMoonSVG.vue  IcoOrMedia.vue  WarnBan.vue
apps/front/src/component/home/: About.vue  Contact.vue  Header.vue  Hero.vue  MilestoneModal.vue  Milestones.vue  NavBar.vue  Projects.vue
apps/front/src/helper/: index.ts  mediaQuerry.ts
apps/front/src/markdown/: detectLink.ts  detectTextSpec.ts  index.ts
apps/front/src/router/: index.ts
apps/front/src/stores/: blog.ts  doc.ts  index.ts  page.ts  project.ts  wasm.ts
apps/front/src/styles/: BlogView.css  DocSidebar.css  DocView.css  DocView.scss  Hero.css  HomeView.css  NavBar.css  Page.css
apps/front/src/styles/Page/: PageContent.css  PageMetadata.css  (+3 more)
apps/front/src/stylesV2/: blogHome.css  index.css  milestonesModal.css
apps/front/src/views/: 404View.vue  418View.vue  App.vue  BlogHomeView.vue  BlogView.vue  DocHomeView.vue  DocView.vue  HomeView.vue  PongView.vue
apps/front/src/viewsV2/: App.vue  BlogHomeView.vue  HomeView.vue  ProjectHomeView.vue
apps/pong/: Cargo.toml  pong.cdx.json  project.json  readme.md
apps/pong/src/: main.rs
apps/pong/src/model/: ball.rs  collision.rs  gutter.rs  mod.rs  score.rs  scoreboard.rs  user_row.rs
cicd/: Chart.yaml  Readme.md  values.yaml
cicd/templates/: eventListener.yaml  ingress.yaml  rbac.yaml
cicd/templates/push/: pipelinePush.yaml  triggerBindingPush.yaml  triggerTemplatePush.yaml
cicd/templates/tag_created/: pipelineTagCreated.yaml  triggerBindingTagCreated.yaml
cicd/templates/task/: build-image.yaml  export-harbor.yaml  github-status.yaml
content/: config.yaml  home.yaml  index.md
content/cicd/: index.md
content/project/: index.md  kube-weebo.md
content/techno/: index.md
deploy/back/: Chart.yaml  values.yaml
deploy/back/templates/: deployment.yaml
deploy/front/: Chart.yaml  values.yaml
deploy/front/templates/: _helpers.tpl  deployment.yaml  ingress.yaml
folio_content/content/: config.yaml  home.yaml  index.md
folio_content/content/CICD/: index.md  portfolio-cicd.md
folio_content/content/Project/: poc-argocd-ovh.md  portfolio.md
folio_content/content/Project/kube-weebo/: ressource.md
folio_content/content/Techno/Infra/: Terraform.md  ansible.md
folio_content/content/Techno/Language/: index.md
folio_content/content/techno/data/: index.md
folio_content/content/techno/infra/: ansible.md  helm.md  kubernetes.md
folio_content/content/techno/sys/: argocd.md  helm.md  kubernetes.md
libs/api-client/: tsconfig.lib.json
libs/api-client/src/api/: schemas.gen.ts  types.gen.ts
libs/back/markdown_header/: Cargo.toml  markdown_header.cdx.json
libs/back/markdown_header/src/: error.rs  lib.rs  parser.rs
libs/back/markdown_struct/: Cargo.toml  markdown_struct.cdx.json
libs/back/markdown_struct/src/: blog_timeline.rs  content_struct.rs  doc_header.rs  doc_sidebar.rs  folder_struct.rs  lib.rs  mdast_to_schema.rs  page_database.rs  project_list.rs
libs/back/tool_tracing/: Cargo.toml  project.json  tool_tracing.cdx.json
libs/back/tool_tracing/src/: init.rs  lib.rs
libs/front/api-client/: package.json  project.json  tsconfig.lib.json
libs/front/api-client/src/: index.ts
libs/hook/: README.md  executors.json  jest.config.ts  package.json  project.json
libs/markdown_header/: Cargo.toml  project.json  readme.md
libs/markdown_header/src/: parser.rs
libs/markdown_header/src/adapt/: json.rs  mod.rs  toml.rs  yaml.rs
libs/markdown_struct/: Cargo.toml  project.json
libs/markdown_struct/src/: blog_timeline.rs  content_struct.rs  doc_header.rs  doc_sidebar.rs  lib.rs
libs/tool_tracing/: Cargo.toml
libs/tool_tracing/src/: init.rs  tracing_kind.rs
template/: ArticleContent.html  Blog.html  Home.html  HomeProject.html  Project.html  Timeline.html  readme.md
template/test-export/: index.html  styles.css
test_dataset/: readme.md
test_dataset/bad_content/: home.yaml
test_dataset/content/: config.yaml  home.yaml  index.md
test_dataset/content/project/: index.md  portfolio.md
(+79 files in other folders)
