
[workspace]
resolver = '2'
members = [
  'apps/back',
  'libs/back/markdown_header',
  'libs/back/tool_tracing',
  'libs/back/markdown_struct',
  'apps/pong',
]

[profile.release]
lto = true

[workspace.dependencies]
tokio = { version = '1', features = ['macros', 'rt-multi-thread', 'io-std'] }
tracing = '0.1'
serde = '1.0'
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"
serde_yaml = "0.9"
utoipa = { version = "5", features = ["chrono"] }
markdown = { version = "1.0.0-alpha.21", features = ["serde"] }
