[package]
name = "back"
version = "0.1.0"
edition = "2021"
default-run = "server"


[dependencies]
chrono = { version = "0.4", features = ["serde"] }
markdown_header = { path = "../../libs/markdown_header" }
markdown_struct = { path = "../../libs/markdown_struct" }
tool_tracing = { path = "../../libs/tool_tracing" }
serde = "1.0"
serde_json = "1.0"
serde_yaml = "0.9"
dotenvy = "0.15"
tracing = "0.1"

# Api Dependencies

tokio = { version = "1.39", features = ["rt-multi-thread"] }
actix-web = "4"
utoipa = { version = "4", features = ["actix_extras", "chrono"] }
utoipa-swagger-ui = { version = "7", features = ["actix-web"] }
actix-cors = "0.7.0"
tracing-actix-web = "0.7.11"
infer = "0.16.0"


# Code that handle the CLI
[[bin]]
name = "server"
path = "src/main.rs"
test = true

# Code for development purpose
[[bin]]
name = "sandbox"
path = "src/bin/sandbox.rs"
test = false

# Code that generate the swagger.json
[[bin]]
name = "swagger"
path = "src/bin/gen_swagger.rs"
test = false
