[package]
name = "back"
version = "0.1.0"
edition = "2021"
default-run = "server"


[dependencies]
chrono = { workspace = true }
markdown_header = { path = "../../libs/back/markdown_header" }
markdown_struct = { path = "../../libs/back/markdown_struct" }
tool_tracing = { path = "../../libs/back/tool_tracing" }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
dotenvy = "0.15"
tracing = { workspace = true }

# Api Dependencies

tokio = { workspace = true }
actix-web = "4"
utoipa = { workspace = true, features = ["actix_extras"] }
utoipa-swagger-ui = { version = "7", features = ["actix-web"] }
actix-cors = "0.7"
tracing-actix-web = "0.7"
infer = "0.16"


# Code that handle the CLI
[[bin]]
name = "server"
path = "src/main.rs"
test = true

# Code for development purpose
[[bin]]
name = "sandbox"
path = "src/bin/sandbox.rs"
test = false

# Code that generate the swagger.json
[[bin]]
name = "swagger"
path = "src/bin/gen_swagger.rs"
test = false
