[package]
name = "back"
version = "0.1.0"
edition = "2021"
default-run = "server"


[dependencies]
chrono = { workspace = true }
markdown_header = { path = "../../libs/back/markdown_header" }
markdown_struct = { path = "../../libs/back/markdown_struct" }
tool_tracing = { path = "../../libs/back/tool_tracing" }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
dotenvy = "0.15"
tracing = { workspace = true }
markdown = { workspace = true }
# Api Dependencies

tokio = { workspace = true }
actix-web = "4"
utoipa = { workspace = true, features = ["actix_extras"] }
actix-cors = "0.7"
tracing-actix-web = "0.7"
infer = "0.19"
utoipa-scalar = { version = "0.3", features = ["actix-web"] }


# Code that handle the CLI
[[bin]]
name = "server"
path = "src/main.rs"
test = true

# Code for development purpose
[[bin]]
name = "sandbox"
path = "src/bin/sandbox.rs"
test = false

# Code that generate the swagger.json
[[bin]]
name = "swagger"
path = "src/bin/gen_swagger.rs"
test = false
