[package]
name = "markdown_header"
version = "0.1.0"
edition = "2021"

[dependencies]
enum-iterator = "2.1.0"
getset = "0.1.2"
quick-error = "2.0.1"
regex = "1.10.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.120"
serde_yaml = "0.9.34"
toml = "0.8.16"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
