[package]
name = "markdown_struct"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = "1.0"
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"
serde_yaml = "0.9"
markdown_header = { path = "../markdown_header" }
utoipa = { version = "4", features = ["chrono"] }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
