[package]
name = "markdown_header"
version = "0.1.0"
edition = "2021"

[dependencies]
enum-iterator = "2.1"
getset = "0.1"
quick-error = "2.0"
regex = "1.10"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
toml = "0.8"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
