[package]
name = "markdown_struct"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
markdown_header = { path = "../markdown_header" }
utoipa = { workspace = true }
markdown = { workspace = true }
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
