[package]
name = "tool_tracing"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_repr = "0.1"
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = [
  "registry",
  "env-filter",
  "time",
] }
time = "0.3"
tracing-bunyan-formatter = "0.3"
opentelemetry = "0.27"
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.28", features = ["grpc-tonic"] }
tracing-opentelemetry = "0.28"
serde_json = { workspace = true }
tokio = { workspace = true }
tonic = { version = "0.12" }


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(coverage,coverage_nightly)',
] }
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
